2004-09-08  Sam Steingold  <sds@gnu.org>

	* modules/exporting.lisp: PROVIDE "exporting"
	* modules/bindings/glibc/linux.lisp, modules/bindings/win32/win32.lisp:
	* modules/matlab/matlab.lisp, modules/netica/netica.lisp:
	* modules/postgresql/postgresql.lisp: REQUIRE "exporting" instead
	of an explicit LOAD to permit stand-alone loading

2004-09-08  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 1024332 ]: file system traversing problems
	* makemake.in (someflags): new variable: encflags + -norc
	use it uniformly everywhere

2004-09-08  Sam Steingold  <sds@gnu.org>

	* init.lisp (load): use the input-stream as the unique EOF object

2004-07-12  Bruno Haible  <bruno@clisp.org>

	* clos-specializer1.lisp (add-direct-generic-function-internal)
	(remove-direct-generic-function-internal)
	(list-direct-generic-functions): Remove functions.
	(forget-direct-generic-functions, add-direct-generic-function):
	Remove functions.
	(compute-direct-generic-functions): Return just a plain list.
	(update-list-direct-generic-functions): Remove function.
	(specializer-direct-generic-functions): Use
	compute-direct-generic-functions.
	(add-direct-method-generic-function): Remove function.
	(add-direct-method, remove-direct-method): Undo last change.
	* clos-specializer3.lisp (specializer-direct-generic-functions): Use
	compute-direct-generic-functions.
	(add-direct-method, remove-direct-method): Undo last change.
	* clos-method1.lisp (method-generic-function): Remove function.
	* clos-method3.lisp (method-generic-function): Undo last change.

2004-07-12  Bruno Haible  <bruno@clisp.org>

	Implement specializer-direct-generic-functions.
	* clos-specializer1.lisp (add-direct-generic-function-internal):
	Renamed from add-direct-generic-function.
	(remove-direct-generic-function-internal): Renamed from
	remove-direct-generic-function.
	(forget-direct-generic-functions, add-direct-generic-function)
	(compute-direct-generic-functions)
	(update-list-direct-generic-functions): New functions.